--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -95,6 +95,20 @@
         <div class="col-md-9">
             <!-- welcome -->
             <div class="xcblog-blog-list">
+                                    <div class="welcome xcblog-blog-item" data-date="2025-01-07">
+                        <div class="col-md-3 agileits_welcome_grid_right">
+                            <a href="/free-nodes/2025-1-7-node-share-links.htm" class="xcblog-blog-url">
+                                <img src="/uploads/20240228/7be10a8674f96dee3b81e43500185f46.webp" alt="1月7日→22.9M/S|2025年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
+                            </a>
+                        </div>
+                        <div class="col-md-9 agileits_welcome_grid_left">
+                            <a href="/free-nodes/2025-1-7-node-share-links.htm" class="xcblog-blog-url">
+                                <h3 class="xcblog-blog-title">1月7日→22.9M/S|2025年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</h3>
+                            </a>
+                            <p>这一次的节点更新覆盖了加拿大、欧洲、美国、新加坡、日本、韩国、香港等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+                        </div>
+                        <div class="clearfix"> </div>
+                    </div>
                                     <div class="welcome xcblog-blog-item" data-date="2025-01-06">
                         <div class="col-md-3 agileits_welcome_grid_right">
                             <a href="/free-nodes/2025-1-6-free-clash-subscribe.htm" class="xcblog-blog-url">
@@ -221,20 +235,6 @@
                         </div>
                         <div class="clearfix"> </div>
                     </div>
-                                    <div class="welcome xcblog-blog-item" data-date="2024-12-28">
-                        <div class="col-md-3 agileits_welcome_grid_right">
-                            <a href="/free-nodes/2024-12-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <img src="/uploads/20240228/dcf34dc84fbab448f7946e41c45555d6.webp" alt="12月28日→22.2M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐" class="img-responsive" />
-                            </a>
-                        </div>
-                        <div class="col-md-9 agileits_welcome_grid_left">
-                            <a href="/free-nodes/2024-12-28-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="xcblog-blog-title">12月28日→22.2M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</h3>
-                            </a>
-                            <p>这一次的节点更新覆盖了日本、新加坡、韩国、美国、香港、加拿大、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-                        </div>
-                        <div class="clearfix"> </div>
-                    </div>
                             </div>
             <ul class="pagination"><li><a href="/free-nodes/">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li class="active"><span>2</span></li><li><a href="/free-nodes/page-3.htm">3</a></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-3.htm">&raquo;</a></li></ul>            <!-- //welcome -->
         </div>
@@ -245,16 +245,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2025-1-2-free-v2ray.htm" title="1月2日→19.1M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐">1月2日→19.1M/S|2025年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-13-free-v2ray.htm" title="1月13日→19.7M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">1月13日→19.7M/S|2025年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-11-2-free-v2ray.htm" title="11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐">11月2日→18.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2025-1-6-free-clash-subscribe.htm" title="1月6日→22.1M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">1月6日→22.1M/S|2025年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-27347.htm" title="58同城免费领养小猫宜春（58同城宠物猫领养）">58同城免费领养小猫宜春（58同城宠物猫领养）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-19-clash-v2ray-ss-ssr.htm" title="10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐">10月19日→22.2M/S|2024年最新免费节点SSR/Shadowrocket/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-2-free-ssr-node.htm" title="12月2日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐">12月2日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-1-free-node-subscribe.htm" title="12月1日→19.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐">12月1日→19.5M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址，便宜机场推荐</a></li>
-                        <li class="py-2"><a href="/news/article-23172.htm" title="开宠物店的利润和风险有哪些问题（开宠物店的利润和风险有哪些问题呢）">开宠物店的利润和风险有哪些问题（开宠物店的利润和风险有哪些问题呢）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-12-18-free-clash.htm" title="12月18日→19.6M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐">12月18日→19.6M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-12-4-free-clash-subscribe.htm" title="12月4日→19.4M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐">12月4日→19.4M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-29198.htm" title="lambda表达式之allMatch、anyMatch、noneMatch">lambda表达式之allMatch、anyMatch、noneMatch</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-14-free-v2ray.htm" title="11月14日→22.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐">11月14日→22.4M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-26419.htm" title="动物打疫苗前后要注意什么 动物打疫苗前后要注意什么事项">动物打疫苗前后要注意什么 动物打疫苗前后要注意什么事项</a></li>
+                        <li class="py-2"><a href="/news/article-30156.htm" title="Redis 数据持久化实践">Redis 数据持久化实践</a></li>
+                        <li class="py-2"><a href="/news/article-35856.htm" title="宠物美容师很辛苦吗（宠物美容师值得坚持吗）">宠物美容师很辛苦吗（宠物美容师值得坚持吗）</a></li>
+                        <li class="py-2"><a href="/news/article-33487.htm" title="python ui框架_PyQt5GUI项目程序框架">python ui框架_PyQt5GUI项目程序框架</a></li>
+                        <li class="py-2"><a href="/free-nodes/2025-1-5-free-node-subscribe-links.htm" title="1月5日→22.7M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐">1月5日→22.7M/S|2025年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/news/article-40760.htm" title="lambda表达式里的anyMatch函数">lambda表达式里的anyMatch函数</a></li>
+                        <li class="py-2"><a href="/news/article-25484.htm" title="宠物狗狗免费领养网询问（正规免费领养宠物狗）">宠物狗狗免费领养网询问（正规免费领养宠物狗）</a></li>
                     </ul>
     </div>
 </div>
@@ -266,7 +266,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">48</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                <h4><span class="badge" style="float: right;">51</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
